Fixed so that the nav items collapse into the "mer"-menu when the screen is small

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,4 +1,11 @@
-nav {
+.navbar {
+    padding: 0;
+    margin: 0;
+}
+
+.navdiv {
+    padding: 10px;
+
     border-radius: 0 !important;
     
     font-family: "Proxima Nova Semibold", sans-serif;
